fixed name wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ h3 {
     margin-bottom: 5px;
     font-size: 148%;
 }
+a {
+    text-decoration: none;
+}
 
 p {
     font-family: 'adobe-garamond-pro', serif;
@@ -267,6 +270,9 @@ span:nth-child(1) {
     color: #333333;
 }
 
+.fixed h1{
+    word-wrap:break-word;
+}
 
 .email {
     color: #909497;
